Changeed z-index for mobile menu and footer issue

--- a/style/style.scss
+++ b/style/style.scss
@@ -138,7 +138,6 @@ table {
     overflow: hidden;
     box-sizing: border-box;
     position: relative;
-    z-index: 20;
     display: flex;
 
     main {
